# This program is licensed under the "MIT License".
# Please see the file LICENSE in this distribution
# for license terms.

[package]
name = "day1"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Solution to Advent of Code 2022 Day 1."
repository = "http://github.com/BartMassey/advent-of-code-2022"
readme = "README.md"
license = "MIT"
edition = "2018"

[[bin]]
name = "day1"
path = "soln.rs"

[dependencies]
aoc = { path = "../libaoc" }
